[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/menu/hudComponents.png" type="Texture" id=1]
[ext_resource path="res://resources/menu/MenuBackground.webm" type="VideoStream" id=2]
[ext_resource path="res://resources/menu/menu.gd" type="Script" id=3]
[ext_resource path="res://resources/menu/HazardStripes.jpg" type="Texture" id=4]
[ext_resource path="res://resources/fonts/font.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/sfx/buttonClicked.ogg" type="AudioStream" id=6]
[ext_resource path="res://resources/music/menu_song.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 120
outline_size = 6
use_filter = true
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -5.36442e-07
margin_top = -459.0
margin_right = 640.0
margin_bottom = -99.0
rect_scale = Vector2( 2.5, 2.5 )
mouse_filter = 2
stream = ExtResource( 2 )
autoplay = true
expand = false
buffering_msec = 1000
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 952, 1030 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 200 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 952, 31 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 4000, 200 )

[node name="GameTitle" type="Label" parent="."]
margin_left = 776.0
margin_top = 184.0
margin_right = 1876.0
margin_bottom = 429.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "planetary
         defense"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Sprite" parent="."]
position = Vector2( 1200, 512 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 700, 425, 370, 110 )

[node name="Button" type="Button" parent="StartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Sprite" parent="."]
position = Vector2( 1200, 656 )
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 700, 300, 370, 110 )

[node name="Button" type="Button" parent="ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 1
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.049
[connection signal="pressed" from="StartButton/Button" to="." method="_on_startButton_pressed"]
[connection signal="pressed" from="ExitButton/Button" to="." method="_on_exitButton_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
